--- a/index.html
+++ b/index.html
@@ -1,10 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta charset='utf-8'>
-    <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-    <title>Real Time Battery Level Indicator using Javascript</title>
-    <meta name='viewport' content='width=device-width, initial-scale=1'>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="theme-color" content="#CD8AFF" />
+    <meta name="description" content="In this tutorial we will make a real-time battery level indicator using JavaScript" />
+    <meta name="keywords" content="battery level indicator, how to detect battery level using javascript" />
+    <meta name="author" content="Rajamanickam">
+    <title>Real Time Battery Level Indicator using Javascript | Rajamanickam</title>
     <link rel="stylesheet" type="text/css" href="style.css">
     <script src="script.js"></script>
 </head>
